<resources>
    <string name="app_name">My Bank</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="shopping_offer">Shopping &amp; Offers</string>
    <string name="recharge">Recharge</string>
    <string name="fund_transfer">Fund Transfer</string>
    <string name="account">Account</string>
    <string name="flight_booking">Flight Booking</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="account_summary">Account Summary</string>
    <string name="my_deals">My Deals</string>
    <string name="payments">Payments</string>
    <string name="transactions">Transactions</string>
    <string name="rewards">Rewards</string>
    <string name="manage_notification">Manage Notification</string>
    <string name="wallet">Wallet</string>
    <string name="bought_at">Bought At : </string>
    <string name="current_price">Current Price : </string>
    <string name="item_name">Item Name</string>
    <string name="buy">Buy Now</string>
    <string name="select_address">Select Address</string>
    <string name="proceed_to_pay">Proceed To Payment</string>
    <string name="name">John Doe</string>
    <string name="address_line1">EON IT Park</string>
    <string name="address_line2">Pune, Maharashtra</string>
    <string name="pincode">Pincode : 411014</string>
    <string name="country">India</string>
    <string name="deliver_to_address">Deliver to this address</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="order_placed">Your order was placed successfully.</string>
    <string name="address">John Doe \n EON IT Park \n Pune, Maharashtra 411014 \n India</string>
    <string name="done">Done</string>
    <string name="wallet_List">Wallet List</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="current_balance">Balance</string>
    <string name="to_account_number">Account Number</string>
    <string name="amount">Amount</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="next">Continue</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="transaction_successful_message">You have successfully transferred the amount.</string>
    <string name="date">Date</string>
    <string name="withdraw">Transation Amount</string>
    <string name="reference_code">Ref No.</string>
    <string name="transaction_desc">Description</string>
    <string name="value_date">Value Date</string>
    <string name="closing_balance">Closing Balance</string>
    <string name="from">Source</string>
    <string name="to">Destination</string>
    <string name="nameHeader">Name</string>
    <string name="phone">Mobile Number</string>
    <string name="email">Email Id</string>
    <string name="flight_booked">Your flight was booked successfully.</string>
    <string name="total_amount">Amount</string>
    <string name="transaction_not_found">There are no transaction available for this wallet.</string>
    <string name="notifications">Notifications</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
</resources>
