<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10dp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_successful"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/grey_blue"
            android:textSize="@dimen/dimen_20dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_placed"
        android:layout_below="@+id/header"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/grey_blue"
        android:textSize="@dimen/dimen_20dp"/>

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:text="@string/done"
        android:textSize="@dimen/dimen_20sp"
        android:textColor="@color/white"
        android:background="@color/grey_blue"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>