<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_5dp">

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_3dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="@dimen/dimen_5dp">
            <ImageView
                android:id="@+id/item_image"
                android:layout_width="@dimen/dimen_60dp"
                android:layout_height="@dimen/dimen_60dp"
                android:src="@drawable/ic_surf"/>
    </LinearLayout>

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toEndOf="@+id/thumbnail"
        android:text="@string/item_name"
        android:textSize="@dimen/dimen_15sp"
        android:textStyle="bold"
        android:textColor="@color/grey_blue"
        android:typeface="sans"/>

    <TextView
        android:id="@+id/current_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name"
        android:layout_toEndOf="@+id/thumbnail"
        android:layout_marginTop="@dimen/dimen_1dp"
        android:text="@string/current_price"
        android:textSize="@dimen/dimen_15sp"
        android:textStyle="bold"
        android:textColor="@color/grey_blue"
        android:typeface="sans"/>

    <TextView
        android:id="@+id/last_bought_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_price"
        android:layout_toEndOf="@+id/thumbnail"
        android:layout_marginTop="@dimen/dimen_1dp"
        android:text="@string/bought_at"
        android:textSize="@dimen/dimen_15sp"
        android:textStyle="bold"
        android:textColor="@color/grey_blue"
        android:typeface="sans"/>

    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/buy"
        android:layout_margin="@dimen/dimen_5dp"
        android:background="@color/grey_blue"
        android:textColor="@color/white"/>
</RelativeLayout>