<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10dp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/amazon_logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_gravity="center"
            android:src = "@drawable/amazon_logo"/>

       <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_address"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/grey_blue"
            android:textSize="@dimen/dimen_20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp"
        android:background="@drawable/background"
        android:layout_below="@+id/header">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_blue"
            android:textSize="@dimen/dimen_16sp"
            android:paddingLeft="@dimen/dimen_10dp"
            android:text="@string/address"/>
    </LinearLayout>

    <Button
        android:id="@+id/proceed_payment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:text="@string/proceed_to_pay"
        android:textSize="@dimen/dimen_20sp"
        android:textColor="@color/white"
        android:background="@color/grey_blue"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>