<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="@dimen/dimen_5dp">

    <RelativeLayout
        android:id="@+id/rl_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp">
        <TextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/dimen_15sp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>

        <TextView
            android:id="@+id/date_value"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_withdraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp">
        <TextView
            android:id="@+id/withdraw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw"
            android:textSize="@dimen/dimen_15sp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>

        <TextView
            android:id="@+id/withdraw_value"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:text="@string/withdraw"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_reference_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp">
        <TextView
            android:id="@+id/reference_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reference_code"
            android:textSize="@dimen/dimen_15sp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>

        <TextView
            android:id="@+id/reference_code_value"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:text="@string/reference_code"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_transaction_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp">
        <TextView
            android:id="@+id/transaction_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_desc"
            android:textSize="@dimen/dimen_15sp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>

        <TextView
            android:id="@+id/transaction_desc_value"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:text="@string/transaction_desc"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_value_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp">
        <TextView
            android:id="@+id/value_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_date"
            android:textSize="@dimen/dimen_15sp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>

        <TextView
            android:id="@+id/value_date_value"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:text="@string/value_date"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_closing_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_5dp"
        android:layout_marginTop="@dimen/dimen_10dp">
        <TextView
            android:id="@+id/closing_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closing_balance"
            android:textSize="@dimen/dimen_15sp"
            android:textStyle="bold"
            android:gravity="start"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>

        <TextView
            android:id="@+id/closing_balance_value"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:text="@string/closing_balance"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:textColor="@color/grey_blue"
            android:typeface="sans"/>
    </RelativeLayout>

</LinearLayout>